--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Congratulations!</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Congratulations</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <a href="#" id="celebrateLink">Click Here Babe</a>
-    <div id="heart"></div>
-  </div>
-
-  <div id="message" class="hidden">
-    <p>Congratulations my Love on your internship.</p>
-  </div>
-
+  <a href="#" id="congratsLink" class="congrats-link">Click me!</a>
+  <div id="message" class="hidden">Congratulations babe on your internship ❤️</div>
   <script src="confetti.js"></script>
   <script src="script.js"></script>
 </body>
