--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a href="#" id="congratsLink" class="congrats-link">Click me!</a>
-  <div id="message" class="hidden">Congratulations babe on your internship ❤️</div>
+  <a href="#" id="congratsLink" class="congrats-link">Click here Babe</a>
+  <div id="message" class="hidden">Congratulations my Love on your internship ❤️</div>
   <script src="confetti.js"></script>
   <script src="script.js"></script>
 </body>
