--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Congratulations</title>
+  <title>Congratulations Explosion</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <a href="#" id="congratsLink" class="congrats-link">Click here Babe</a>
+  <a href="#" id="congratsLink" class="congrats-link">Click Here Babe</a>
   <div id="message" class="hidden">Congratulations my Love on your internship ❤️</div>
-  <script src="confetti.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
